<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestEncryptionActivity" >

    <TextView
        android:id="@+id/aesKeySizeTestTV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/aesKeySize" />

    <TextView
        android:id="@+id/rsaKeySizeTestTV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aesKeySizeTestTV"
        android:layout_below="@+id/aesKeySizeTestTV"
        android:layout_marginTop="10dp"
        android:text="@string/rsaKeySize" />

    <TextView
        android:id="@+id/messageLengthTestTV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/rsaKeySizeTestTV"
        android:layout_below="@+id/rsaKeySizeTestTV"
        android:layout_marginTop="10dp"
        android:text="@string/messageLength" />
    
    <View
        android:id="@+id/horizontalLine"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/messageLengthTestTV"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="#000000" />
    
     <TextView
        android:id="@+id/encryptTimeTV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/aesKeySizeTestTV"
        android:layout_below="@+id/horizontalLine"
        android:layout_marginTop="10dp"
        android:text="@string/encryptTime" />
    
    <TextView
        android:id="@+id/decryptTimeTV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/encryptTimeTV"
        android:layout_below="@+id/encryptTimeTV"
        android:layout_marginTop="10dp"
        android:text="@string/decryptTime" />
    
    <TextView
        android:id="@+id/signTimeTV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/decryptTimeTV"
        android:layout_below="@+id/decryptTimeTV"
        android:layout_marginTop="10dp"
        android:text="@string/signTime" />
    
    <TextView
        android:id="@+id/verifyTimeTV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/signTimeTV"
        android:layout_below="@+id/signTimeTV"
        android:layout_marginTop="10dp"
        android:text="@string/verifyTime" />

</RelativeLayout>