<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/participantCountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/participantCount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/participantCountSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/participantCountTV"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/permutationLengthTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/participantCountSpinner"
        android:text="@string/permLength"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/permutationLengthSpinner"
        android:layout_toRightOf="@+id/permutationLengthTV"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/participantCountSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp" />
    
     <TextView
         android:id="@+id/proofCountTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/permutationLengthSpinner"
         android:layout_marginLeft="15dp"
         android:text="@string/proofCount"
         android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/proofCountSpinner"
        android:layout_toRightOf="@+id/proofCountTV"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/permutationLengthSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp" />
    
     <TextView
         android:id="@+id/permKeySizeTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/proofCountSpinner"
         android:layout_marginLeft="15dp"
         android:text="@string/permKeySize"
         android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/permKeySizeSpinner"
        android:layout_toRightOf="@+id/permKeySizeTV"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/proofCountSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp" />
    
    

    <Button
        android:id="@+id/runTestBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"
        android:onClick="runTestBtnClicked"
        android:text="@string/runTest" />

</RelativeLayout>