<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigureEncryptTestActivity" >
    
    <TextView
        android:id="@+id/aesKeySizeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/aesKeySize"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/aesKeySizeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/aesKeySizeTV"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/rsaKeySizeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/aesKeySizeSpinner"
        android:text="@string/rsaKeySize"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/rsaKeySizeSpinner"
        android:layout_toRightOf="@+id/rsaKeySizeTV"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/aesKeySizeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp" />
    
     <TextView
         android:id="@+id/messageLengthTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/rsaKeySizeSpinner"
         android:layout_marginLeft="15dp"
         android:text="@string/messageLength"
         android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/messageLengthSpinner"
        android:layout_toRightOf="@+id/messageLengthTV"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/rsaKeySizeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp" />  
    

    <Button
        android:id="@+id/runEncryptTestBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"
        android:onClick="runEncryptTestBtnClicked"
        android:text="@string/runTest" />

</RelativeLayout>